Try using a different token for posting a comment
Signed-off-by: Balaji Srinivasan <balaji.srinivasan@nordicsemi.no>

--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,9 @@ inputs:
     description: 'The minimum coverage to pass the check. Optional. Default: `0` (always passes)'
     default: 0
   github-token:
-    description: 'Set the GitHub token to have the action comment the coverage summary in the pull request. This token is provided by Actions, you do not need to create your own token. Optional. Default: ``'
+    description: 'Github token to publish artifacts. Optional. Default: ``'
+  github-comment-token:
+    description: 'Git token to use to publish comment with coverage summary. Optional. Default: ``'
   working-directory:
     description: 'The working directory containing the source files referenced in the LCOV files. Optional. Default: `./`'
 runs:
