--- a/action.yml
+++ b/action.yml
@@ -8,8 +8,7 @@ inputs:
     description: 'The coverage files to scan. For example, `coverage/lcov.*.info`'
     required: true
   artifact-name:
-    description: 'The GitHub artifact name of the generated HTML report. For example, `code-coverage-report`. _Note:_ When downloading, it will be extracted in an `html` directory'
-    required: true
+    description: 'The GitHub artifact name of the generated HTML report. For example, `code-coverage-report`. _Note:_ When downloading, it will be extracted in an `html` directory. If this is not provided, the artifacts will not be uploaded.'
   minimum-coverage:
     description: 'The minimum coverage to pass the check. Optional. Default: `0` (always passes)'
     default: 0
